# ironloom

./: .actrc  .dockerignore  .gitignore  .prettierignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  OPERATOR_EXPECTATION_GAPS.md  OPERATOR_TESTING_PLAN.md  PLATFORM.md  README.md  SECURITY.md  clippy.toml  codealike.json  deny.toml  eslint.config.mjs  package-lock.json  package.json  sonar-project.properties  tsconfig.base.json  tsconfig.eslint.json  vitest.config.mts
.changeset/: calm-birds-jam.md  config.json  delegated-validation-depth.md  dependent-rebase-conflicts.md  discord-feedback-rendering-cleanups.md  discord-next-action-buttons.md  discord-response-estimates.md  discord-ux-live-validation.md  full-autonomy-contracts.md  headless-continuation-loop.md  headless-maintenance-runner.md  live-operator-controls.md  local-debug-stack.md  local-handoff-resume.md  openclaw-local-runtime-links.md  operator-command-surface-alignment.md  operator-control-plane-metadata-and-context.md  quick-operator-acknowledgements.md  rich-poems-share.md  strong-trains-spark.md  sweet-buckets-fry.md
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
crates/ironloom-artifacts/: Cargo.toml
crates/ironloom-artifacts/schemas/: artifact-envelope.schema.json  artifact-kind.schema.json
crates/ironloom-artifacts/src/: lib.rs
crates/ironloom-config/: Cargo.toml
crates/ironloom-config/schemas/: runtime-config.schema.json  stored-setup-config.schema.json
crates/ironloom-config/src/: lib.rs
crates/ironloom-config/tests/: runtime_config.rs
crates/ironloom-core/: Cargo.toml
crates/ironloom-core/schemas/: actor-id.schema.json  artifact-id.schema.json  branch-name.schema.json  correlation-id.schema.json  repository-slug.schema.json  run-id.schema.json  thread-id.schema.json  work-item-id.schema.json
crates/ironloom-core/src/: lib.rs
crates/ironloom-core/tests/: domain_contract.rs
crates/ironloom-discord/: Cargo.toml
crates/ironloom-discord/schemas/: discord-command.schema.json
crates/ironloom-discord/src/: lib.rs
crates/ironloom-discord/tests/: interactions.rs
crates/ironloom-gates/: Cargo.toml
crates/ironloom-gates/schemas/: gate-result.schema.json  gate-status.schema.json
crates/ironloom-gates/src/: lib.rs
crates/ironloom-gates/tests/: command_runner.rs
crates/ironloom-github/: Cargo.toml
crates/ironloom-github/schemas/: check-run-conclusion.schema.json  check-run-projection.schema.json  check-run-status.schema.json  pull-request-projection.schema.json  repository-projection.schema.json
crates/ironloom-github/src/: lib.rs
crates/ironloom-github/tests/: api_client.rs  http_transport.rs  source_of_truth.rs
crates/ironloom-observability/: Cargo.toml
crates/ironloom-observability/schemas/: audit-record.schema.json
crates/ironloom-observability/src/: lib.rs
crates/ironloom-policy/: Cargo.toml
crates/ironloom-policy/schemas/: action-kind.schema.json  policy-context.schema.json  policy-decision.schema.json
crates/ironloom-policy/src/: lib.rs
crates/ironloom-policy/tests/: policy_decisions.rs
crates/ironloom-process-graph/: Cargo.toml
crates/ironloom-process-graph/schemas/: process-graph.schema.json  process-node.schema.json  retry-policy.schema.json  transition.schema.json
crates/ironloom-process-graph/src/: lib.rs
crates/ironloom-process-graph/tests/: validation.rs
crates/ironloom-queue/: Cargo.toml
crates/ironloom-queue/schemas/: queue-item.schema.json  queue-state.schema.json
crates/ironloom-queue/src/: lib.rs
crates/ironloom-queue/tests/: lifecycle.rs
crates/ironloom-runtime/: Cargo.toml
crates/ironloom-runtime/src/: lib.rs  main.rs
crates/ironloom-runtime/tests/: live_adapter_composition.rs  proof_project.rs  setup_http.rs  startup.rs  vertical_slice.rs
crates/ironloom-schemas/: Cargo.toml
crates/ironloom-schemas/src/: lib.rs  main.rs
crates/ironloom-schemas/tests/: schema_generation.rs
crates/ironloom-sonarcloud/: Cargo.toml
crates/ironloom-sonarcloud/schemas/: quality-gate-status.schema.json  sonar-cloud-config.schema.json  sonar-cloud-issue-severity.schema.json  sonar-cloud-issue.schema.json
crates/ironloom-sonarcloud/src/: lib.rs
crates/ironloom-sonarcloud/tests/: api_client.rs  bootstrap.rs  http_transport.rs
crates/ironloom-storage/: Cargo.toml
crates/ironloom-storage/schemas/: stored-artifact-index.schema.json
crates/ironloom-storage/src/: lib.rs
crates/ironloom-storage/tests/: artifact_store.rs  setup_config_store.rs  thread_bindings.rs
crates/ironloom-supervisor/: Cargo.toml
crates/ironloom-supervisor/schemas/: supervisor-decision.schema.json  supervisor-input.schema.json
crates/ironloom-supervisor/src/: lib.rs
crates/ironloom-supervisor/tests/: worker_dispatch.rs
crates/ironloom-workers/: Cargo.toml
crates/ironloom-workers/schemas/: worker-request.schema.json  worker-response.schema.json
crates/ironloom-workers/src/: lib.rs
crates/ironloom-workers/tests/: registry.rs
scripts/: check-changed-coverage.mjs  check-changed-coverage.test.mjs  check-constants.mjs  check-constants.test.mjs  check-dependency-graph.mjs  check-exports.mjs  check-instructions.mjs  check-instructions.test.mjs  check-jsdoc.mjs  check-jsdoc.test.mjs  check-packages.mjs  check-policy-boundaries.mjs  check-policy-boundaries.test.mjs  check-pre-push.mjs  check-pre-push.test.mjs  check-regex-governance.mjs  check-regex-governance.test.mjs  check-type-assertions.mjs  check-type-assertions.test.mjs  check-unit-tests.mjs  check-unit-tests.test.mjs  discord-endpoint-acceptance.sh  discord-live-lab-harness.mjs  discord-ux-live-lab.mjs  discord-ux-live-lab.test.mjs  docker-build-runtime.sh  docker-publish-workflow.test.mjs  docker-runtime-dockerfile.test.mjs  docker-runtime-script.test.mjs  eslint-devplat-rules.mjs  eslint-devplat-rules.test.mjs  generate-openclaw-manifest.mjs  generate-schemas.mjs  github-app-token.mjs  github-app-token.test.mjs  headless-maintenance-runner.mjs  headless-maintenance-runner.test.mjs  helm-chart.test.mjs  k3s-acceptance.sh  (+21 more)
(+183 files in other folders)
