[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/VannaDii/ironloom"
homepage = "https://ironloom.dev"
publish = false

[workspace.dependencies]
hex = "0.4.3"
schemars = { version = "1.0.4", features = ["derive", "uuid1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11.0"
tempfile = "3.23.0"
thiserror = "2.0.17"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
all = "deny"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
