[package]
name = "ironloom-artifacts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "Immutable Ironloom artifact contracts."

[dependencies]
hex.workspace = true
ironloom-core = { path = "../ironloom-core", version = "0.1.0" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[lints]
workspace = true
