[package]
name = "ironloom-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "Validated Ironloom runtime configuration."

[dependencies]
base64.workspace = true
ironloom-core = { path = "../ironloom-core", version = "0.1.0" }
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
