[package]
name = "ironloom-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "Core Ironloom domain primitives."

[dependencies]
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
