[package]
name = "ironloom-discord"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "Thread-aware Ironloom Discord operator adapter."

[dependencies]
ed25519-dalek.workspace = true
hex.workspace = true
ironloom-core = { path = "../ironloom-core", version = "0.1.0" }
ironloom-supervisor = { path = "../ironloom-supervisor", version = "0.1.0" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
