[package]
name = "ironloom-gates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "Ironloom gate runner contracts and command execution."

[dependencies]
ironloom-artifacts = { path = "../ironloom-artifacts", version = "0.1.0" }
ironloom-core = { path = "../ironloom-core", version = "0.1.0" }
schemars.workspace = true
serde.workspace = true

[lints]
workspace = true
