[package]
name = "ironloom-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "Fail-closed Ironloom policy evaluation."

[dependencies]
ironloom-core = { path = "../ironloom-core", version = "0.1.0" }
schemars.workspace = true
serde.workspace = true

[lints]
workspace = true
