[package]
name = "ironloom-process-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "Typed Ironloom process graph definitions and validation."

[dependencies]
ironloom-artifacts = { path = "../ironloom-artifacts", version = "0.1.0" }
ironloom-core = { path = "../ironloom-core", version = "0.1.0" }
ironloom-policy = { path = "../ironloom-policy", version = "0.1.0" }
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
