[package]
name = "ironloom-queue"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "Durable Ironloom queue lifecycle contracts."

[dependencies]
ironloom-core = { path = "../ironloom-core", version = "0.1.0" }
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
