[package]
name = "ironloom-schemas"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "Ironloom JSON Schema generation and drift checks."

[dependencies]
ironloom-artifacts = { path = "../ironloom-artifacts", version = "0.1.0" }
ironloom-config = { path = "../ironloom-config", version = "0.1.0" }
ironloom-core = { path = "../ironloom-core", version = "0.1.0" }
ironloom-discord = { path = "../ironloom-discord", version = "0.1.0" }
ironloom-gates = { path = "../ironloom-gates", version = "0.1.0" }
ironloom-github = { path = "../ironloom-github", version = "0.1.0" }
ironloom-observability = { path = "../ironloom-observability", version = "0.1.0" }
ironloom-policy = { path = "../ironloom-policy", version = "0.1.0" }
ironloom-process-graph = { path = "../ironloom-process-graph", version = "0.1.0" }
ironloom-queue = { path = "../ironloom-queue", version = "0.1.0" }
ironloom-sonarcloud = { path = "../ironloom-sonarcloud", version = "0.1.0" }
ironloom-supervisor = { path = "../ironloom-supervisor", version = "0.1.0" }
ironloom-workers = { path = "../ironloom-workers", version = "0.1.0" }
ironloom-worktrees = { path = "../ironloom-worktrees", version = "0.1.0" }
schemars.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
