[package]
name = "ironloom-sonarcloud"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "SonarCloud quality gate normalization for Ironloom."

[dependencies]
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
