[package]
name = "ironloom-sonarcloud"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "SonarCloud quality gate normalization for Ironloom."

[dependencies]
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

[lints]
workspace = true
